# music_api

./: .gitignore  .tasks  README.md  __init__.py  _template.py  pyproject.toml  user_agents.txt  utils.py
kg/: __init__.py  _kg.py
kw/: __init__.py  _kw.py  encrypt.js
lib/: AES.py
mg/: __init__.py  _mg.py
qianqian/: _qianqian.py
src/music_api/: _template.py
src/music_api/kw/: __init__.py  _kw.py
src/music_api/lib/: RSA.py
src/music_api/mg/: __init__.py  _mg.py
src/music_api/qianqian/: __init__.py  _qianqian.py
src/music_api/wyy/: __init__.py  _wyy.py
tests/: __init__.py  test_mg.py
tests/kg/: test_kg.py
tests/kw/: test_kw.py
tests/mg/: test_mg.py
tests/qianqian/: test_qianqian.py
tests/wyy/: test_wyy.py
wyy/: _wyy.py
